--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-846.4KB/s(Youtube:不良林), server: chunchuan-01.aikala.shop, port: 80, type: vmess, uuid: c2b378ae-6ef6-49fd-bf8e-72cd2af55de4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: chunchuan-01.aikala.shop}}
-  - {name: 🇨🇳 中国-3.52MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20070, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.05MB/s(Youtube:不良林), server: ysdns.ke666.net, port: 12602, type: vmess, uuid: 6f9d9205-2b78-4e39-b791-b00296852331, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /yunsunode, ws-headers: {Host: ysdns.ke666.net}}
-  - {name: 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林), server: v2.ssrsub.com, port: 153, type: vmess, uuid: 640e3ef0-9c44-49a8-98f6-0895b11eecd6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
-  - {name: 🇯🇵 日本-5.25MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.59MB/s(Youtube:不良林), server: gzyd2.xxcv.cc, port: 20070, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: gzyd2.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-406.9KB/s(Youtube:不良林), server: 611hk01.fans8.xyz, port: 443, type: trojan, password: 823c10f1-8498-4978-8706-4f02008955f0, sni: 611hk01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.44MB/s(Youtube:不良林), server: us-12.hmkj9.com, port: 54321, type: trojan, password: 1ac27c98-7883-483b-b958-7d6a68b60663, sni: us-12.hmkj9.com, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.02MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇸🇬 新加坡-3.57MB/s(Youtube:不良林), server: 67tw01.fans8.xyz, port: 443, type: trojan, password: 823c10f1-8498-4978-8706-4f02008955f0, sni: 67tw01.fans8.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.16MB/s(Youtube:不良林), server: hk1.ningmengshui.xyz, port: 80, type: vmess, uuid: 1e9f956b-1720-4519-b5c9-333247f6c23f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk1.ningmengshui.xyz}}
   - {name: 🇯🇵 日本-5.09MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
   - {name: 🇺🇸 美国-5.00MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-846.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-846.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-846.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-846.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-846.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-846.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-846.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.05MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-406.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.57MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
