--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-3.21MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-17.09MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20030, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.31MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
   - {name: 🇭🇰 香港-6.23MB/s(Youtube:不良林), server: hk5.lolvps.xyz, port: 46600, type: vmess, uuid: 836fe834-4204-460d-b586-52d9bd407e8b, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /N4POVB85, ws-headers: {Host: hk5.lolvps.xyz}}
-  - {name: 🇫🇷 法国-2.65MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇭🇰 香港-4.02MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林), server: v2.ssrsub.com, port: 153, type: vmess, uuid: 640e3ef0-9c44-49a8-98f6-0895b11eecd6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
+  - {name: 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.89MB/s(Youtube:不良林), server: hnyd.xxcv.cc, port: 20040, type: trojan, password: 71b785a5-2809-4d4c-ba85-4879f96e5c06, sni: hnyd.xxcv.cc, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林), server: v2.ssrsub.com, port: 153, type: vmess, uuid: 640e3ef0-9c44-49a8-98f6-0895b11eecd6, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
   - {name: 🇺🇸 美国-2.12MB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.16MB/s(Youtube:不良林), server: hk1.ningmengshui.xyz, port: 80, type: vmess, uuid: 1e9f956b-1720-4519-b5c9-333247f6c23f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk1.ningmengshui.xyz}}
   - {name: 🇯🇵 日本-5.02MB/s(Youtube:不良林), server: 152.69.206.209, port: 1212, type: vmess, uuid: fb908160-9697-4bfd-f5b7-f1fbc53e60fa, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 152.69.206.209}}
-  - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.18MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.23MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.09MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.31MB/s(Youtube:不良林)
       - 🇭🇰 香港-6.23MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.65MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.02MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.23MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.89MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.12MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.18MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
